force-app/main/default/objects/cf_Checklist_Assigned_Item__c/cf_Checklist_Assigned_Item__c.object-meta.xml
<CustomObject>
    <description>Represents a checklist item assigned to a specific Checklist instance or record.</description>
    <label>Checklist Assigned Item</label>
    <nameField>
        <displayFormat>Item-{000000000}</displayFormat>
        <label>Checklist Control Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Assigned Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>