force-app/main/default/objects/cf_Checklist_Assigned_Item__c/fields/Checklist_Instance__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the Checklist Instance to the Checklist Item Assigned</description>
    <label>Checklist Instance</label>
    <referenceTo>cf_Checklist_Instance__c</referenceTo>
    <relationshipLabel>Checklist Assigned Item</relationshipLabel>
    <relationshipName>Checklist_Assigned_Item</relationshipName>
    <type>Lookup</type>
</CustomField>