force-app/main/default/objects/cf_Checklist_Assigned_Item__c/fields/Checklist_Item__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the original template checklist item for audit or back-reference</description>
    <label>Checklist Item</label>
    <referenceTo>cf_Checklist_Item_Template__c</referenceTo>
    <relationshipLabel>Checklist Assigned Item</relationshipLabel>
    <relationshipName>Checklist_Assigned_Item</relationshipName>
    <type>Lookup</type>
</CustomField>