force-app/main/default/objects/cf_Checklist_Assigned_Item__c/fields/Checklist_Item_Label__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Item_Label__c</fullName>
    <description>Display name of this assigned checklist item</description>
    <label>Checklist Item Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>