force-app/main/default/objects/cf_Checklist_Assigned_Item__c/fields/Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who completed the item</description>
    <label>Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Completed By</relationshipLabel>
    <relationshipName>Completed_By</relationshipName>
    <type>Lookup</type>
</CustomField>