force-app/main/default/objects/cf_Checklist_Assigned_Item__c/fields/Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date_Time__c</fullName>
    <description>Timestamp when item was completed</description>
    <label>Completed Date Time</label>
    <type>DateTime</type>
</CustomField>