force-app/main/default/objects/cf_Checklist_Assigned_Item__c/fields/Is_Completed__c.field-meta.xml
<CustomField>
    <fullName>Is_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when item is completed</description>
    <label>Is Completed</label>
    <type>Checkbox</type>
</CustomField>