force-app/main/default/objects/cf_Checklist_Assigned_Item__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Relative weight or importance of the item</description>
    <label>Weight</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>