force-app/main/default/objects/cf_Checklist_Assigned_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Checklist_Item__c</columns>
    <columns>Checklist_Item_Label__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Weight__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>